update layout example to video

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -94,7 +94,16 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <img class="figure-image" src="layout.png" />
+            <video
+              autoplay
+              loop
+              class="figure-image"
+              poster="layout.png"
+              width="1024"
+            >
+              <source src="layout.webm" type="video/webm" />
+              <source src="layout.mov" type="video/mp4" />
+            </video>
           </figure>
         </section>
         <section class="section">
