add "Thoughts" page

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -44,8 +44,8 @@
           <a href="/">Benedict Forrest</a>
         </strong>
         <div class="flex gap-8">
-          <a class="button" href="/">Home</a>
-          <a class="button" href="/about/">About</a>
+          <a class="button" href="/thoughts/">🧠 Thoughts</a>
+          <a class="button" href="/about/">🧑‍💻 About</a>
         </div>
       </nav>
 
@@ -96,12 +96,11 @@
           <figure class="figure">
             <video
               autoplay
+              controls
               loop
-              class="figure-image"
+              class="figure-video"
               poster="layout.png"
-              width="1024"
             >
-              <source src="layout.webm" type="video/webm" />
               <source src="layout.mov" type="video/mp4" />
             </video>
           </figure>
