--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -40,8 +40,8 @@
           <a href="/">Benedict Forrest</a>
         </strong>
         <div class="flex gap-8">
-          <a class="button" href="/">Home</a>
-          <a class="button" href="/about/">About</a>
+          <a class="button" href="/thoughts/">🧠 Thoughts</a>
+          <a class="button" href="/about/">🧑‍💻 About</a>
         </div>
       </nav>
 
