--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -44,66 +44,45 @@
           <a href="/">Benedict Forrest</a>
         </strong>
         <div class="flex gap-8">
-          <a class="button" href="/thoughts/">🧠 Thoughts</a>
-          <a class="button" href="/about/" aria-current="page">🧑‍💻 About</a>
+          <a class="button" href="/thoughts/" aria-current="page"
+            >🧠 Thoughts</a
+          >
+          <a class="button" href="/about/">🧑‍💻 About</a>
         </div>
       </nav>
 
       <!-- Article -->
       <article class="article">
-        <section class="section">
+        <header class="section">
           <div class="text">
-            <h1>Get to know me more.</h1>
+            <h1>Thoughts</h1>
             <p>
-              I've been designing and coding for the web for 17 years. That's so
-              long ago, that when I was learning web development I was using
-              Dreamweaver (and it was still owned by Macromedia). I've done it
-              all from creating custom HTML email template (by hand, all in
-              tables) to maintaining design systems with 100+ components for
-              global SaaS companies.
-            </p>
-            <p>
-              I do my best work when I'm with a small team of enthusiastic,
-              hard-working people, who really believe that their product is
-              going to change the world. I'm a get-shit-done'r, who excels in a
-              fast-paced, agile team who want to take the design of their app to
-              the next level.
+              Some of my thoughts and experiments with Figma and the web. Read
+              at your own risk.
             </p>
           </div>
-        </section>
-        <section class="section highlight">
-          <div class="text">
-            <h2>What I believe.</h2>
-            <div class="flex column gap-8">
-              <h3>🧑‍🎨 Design belongs to everyone.</h3>
-              <p>
-                I encourage everyone in the company to be involved in the design
-                process. The more buy-in everybody has about the design of the
-                product, the stronger it will be. And I believe it's part of the
-                role of designers to teach everyone how to make good decisions
-                for their users.
-              </p>
+        </header>
+        <section class="section gallery">
+          <a href="/thoughts/icon-variables/" class="project">
+            <img
+              class="project-image"
+              src="/thoughts/icon-variables/preview.png"
+              style="view-transition-name: thoughts-icv-preview"
+            />
+            <div class="project-details">
+              <div class="project-title">Using Variables for Icon Sets</div>
             </div>
-            <div class="flex column gap-8">
-              <h3>🤯 We're more than just our jobs.</h3>
-              <p>
-                If you work with me, you won't just be working with a designer.
-                You also being working with some that love to: eat snacks; goof
-                around in the office; bring in baked goods; organise team
-                lunches; play Dungeons & Dragons; start playing a lot of video
-                games but never finish them.
-              </p>
+          </a>
+          <a href="/thoughts/looping-figma-animation/" class="project">
+            <img
+              class="project-image"
+              src="/thoughts/looping-figma-animation/preview.png"
+              style="view-transition-name: thoughts-lfa-preview"
+            />
+            <div class="project-details">
+              <div class="project-title">Looping Animations in Figma</div>
             </div>
-            <div class="flex column gap-8">
-              <h3>🙌 Don't be an asshole.</h3>
-              <p>
-                The workplace (whether it's physical or digital) needs to be a
-                safe environment, where everyone feels encouraged to share their
-                ideas and opinions. Everyone deserves to be treated with respect
-                and empathy, and toxicity has no place in, or outside, of work.
-              </p>
-            </div>
-          </div>
+          </a>
         </section>
       </article>
 
