--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <a href="/" aria-current="page">Benedict Forrest</a>
         </strong>
         <div class="flex gap-8">
+          <a class="button" href="/" aria-current="page">💼 Work</a>
           <a class="button" href="/thoughts/">🧠 Thoughts</a>
           <a class="button" href="/about/">🧑‍💻 About</a>
         </div>
