--- a/thoughts/icon-variables/index.html
+++ b/thoughts/icon-variables/index.html
@@ -44,6 +44,7 @@
           <a href="/">Benedict Forrest</a>
         </strong>
         <div class="flex gap-8">
+          <a class="button" href="/">💼 Work</a>
           <a class="button" href="/thoughts/" aria-current="page"
             >🧠 Thoughts</a
           >
