--- a/thoughts/looping-figma-animation/index.html
+++ b/thoughts/looping-figma-animation/index.html
@@ -44,6 +44,7 @@
           <a href="/">Benedict Forrest</a>
         </strong>
         <div class="flex gap-8">
+          <a class="button" href="/">💼 Work</a>
           <a class="button" href="/thoughts/" aria-current="page">🧠 Thoughts</a>
           <a class="button" href="/about/">🧑‍💻 About</a>
         </div>
