--- a/thoughts/better-layer-selecting/index.html
+++ b/thoughts/better-layer-selecting/index.html
@@ -56,44 +56,65 @@
       <article class="article">
         <header class="section">
           <div class="text">
-            <h1>Thoughts</h1>
-            <p>
-              Some of my thoughts and experiments with Figma and the web. Read
-              at your own risk.
-            </p>
+            <a href="/thoughts/" class="button">
+              <svg width="20" height="20" viewBox="0 0 20 20">
+                <path
+                  d="M9.42417 4.57564C9.65848 4.80995 9.65848 5.18985 9.42417 5.42417L5.44843 9.3999H14.9999C15.3313 9.3999 15.5999 9.66853 15.5999 9.9999C15.5999 10.3313 15.3313 10.5999 14.9999 10.5999H5.44843L9.42417 14.5756C9.65848 14.81 9.65848 15.1899 9.42417 15.4242C9.18985 15.6585 8.80995 15.6585 8.57564 15.4242L3.57564 10.4242C3.34132 10.1899 3.34132 9.80995 3.57564 9.57564L8.57564 4.57564C8.80995 4.34132 9.18985 4.34132 9.42417 4.57564Z"
+                />
+              </svg>
+              Back</a
+            >
+            <h1>Better Layer Selecting</h1>
           </div>
         </header>
         <section class="section gallery">
-          <a href="/thoughts/icon-variables/" class="project">
-            <img
-              class="project-image"
-              src="/thoughts/icon-variables/preview.png"
-              style="view-transition-name: thoughts-icv-preview"
-            />
-            <div class="project-details">
-              <div class="project-title">Using Variables for Icon Sets</div>
-            </div>
-          </a>
-          <a href="/thoughts/looping-figma-animation/" class="project">
-            <img
-              class="project-image"
-              src="/thoughts/looping-figma-animation/preview.png"
-              style="view-transition-name: thoughts-lfa-preview"
-            />
-            <div class="project-details">
-              <div class="project-title">Looping Animations in Figma</div>
-            </div>
-          </a>
-          <a href="/thoughts/better-layer-selecting/" class="project">
-            <img
-              class="project-image"
-              src="/thoughts/better-layer-selecting/preview.png"
+          <figure class="figure">
+            <video
+              autoplay
+              controls
+              loop
+              class="figure-video"
               style="view-transition-name: thoughts-bls-preview"
-            />
-            <div class="project-details">
-              <div class="project-title">Better Layer Selecting</div>
-            </div>
-          </a>
+            >
+              <source src="before.mp4" type="video/mp4" />
+            </video>
+          </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <p>
+              Cue rant about something that probably only annoys me. When I'm
+              using an icon set in a design, and I try to select an instance of
+              an icon, it does this thing that really bothers me. Using
+              <kbd>⌘+Click</kbd> to select an icon that is in a deeply nested
+              layer, it goes one layer to far and selects the shape directly.
+              Now, if I was designing or editing the icon I would want that, but
+              99% of the time I am just trying to select the component's root
+              layer so I can swap it out, or change a prop value. So now I have
+              to take another step to select the layer I want.
+            </p>
+            <p>
+              If this bothers you too, here's what I do to never run into this
+              problem again. I lock the shape's layer and add a transparent
+              background colour to the component's root layer.
+              <em
+                >Side note: If you set the "Opacity" of the background colour to
+                0 it will not be selectable, but if you set it to 0.001 it will
+                round down to 0 and still be selectable.</em
+              >
+              Now when I use <kbd>⌘+Click</kbd> to select an icon it will always
+              select the root layer. Problem solved! This might only save a
+              fraction of second, but after a 1000 times doing it that savings
+              adds up.
+            </p>
+          </div>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <video autoplay controls loop class="figure-video">
+              <source src="after.mp4" type="video/mp4" />
+            </video>
+          </figure>
         </section>
       </article>
 
