add my pretty face to the nav

--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
     <div class="layout">
       <!-- Nav -->
       <nav class="nav" style="view-transition-name: nav">
-        <strong>
-          <a href="/" aria-current="page">Benedict Forrest</a>
-        </strong>
+        <a class="nav-home" href="/" aria-current="page">
+          <img
+            src="/assets/memoji.png"
+            class="memoji small"
+            alt="Memoji of Benedict Forrest"
+          />
+          Benedict Forrest
+        </a>
         <div class="flex gap-8">
           <a class="button" href="/" aria-current="page">💼 Work</a>
           <a class="button" href="/thoughts/">🧠 Thoughts</a>
