--- a/thoughts/better-layer-selecting/index.html
+++ b/thoughts/better-layer-selecting/index.html
@@ -40,9 +40,14 @@
     <div class="layout">
       <!-- Nav -->
       <nav class="nav" style="view-transition-name: nav">
-        <strong>
-          <a href="/">Benedict Forrest</a>
-        </strong>
+        <a class="nav-home" href="/">
+          <img
+            src="/assets/memoji.png"
+            class="memoji small"
+            alt="Memoji of Benedict Forrest"
+          />
+          Benedict Forrest
+        </a>
         <div class="flex gap-8">
           <a class="button" href="/">💼 Work</a>
           <a class="button" href="/thoughts/" aria-current="page"
