--- a/thoughts/component-child-width/index.html
+++ b/thoughts/component-child-width/index.html
@@ -61,56 +61,61 @@
       <article class="article">
         <header class="section">
           <div class="text">
-            <h1>Thoughts</h1>
-            <p>
-              Some of my thoughts and experiments with Figma and the web. Read
-              at your own risk.
-            </p>
+            <a href="/thoughts/" class="button">
+              <svg width="20" height="20" viewBox="0 0 20 20">
+                <path
+                  d="M9.42417 4.57564C9.65848 4.80995 9.65848 5.18985 9.42417 5.42417L5.44843 9.3999H14.9999C15.3313 9.3999 15.5999 9.66853 15.5999 9.9999C15.5999 10.3313 15.3313 10.5999 14.9999 10.5999H5.44843L9.42417 14.5756C9.65848 14.81 9.65848 15.1899 9.42417 15.4242C9.18985 15.6585 8.80995 15.6585 8.57564 15.4242L3.57564 10.4242C3.34132 10.1899 3.34132 9.80995 3.57564 9.57564L8.57564 4.57564C8.80995 4.34132 9.18985 4.34132 9.42417 4.57564Z"
+                />
+              </svg>
+              Back</a
+            >
+            <h1>Changing Width Inside a Component Instance</h1>
           </div>
         </header>
         <section class="section gallery">
-          <a href="/thoughts/icon-variables/" class="project">
-            <img
-              class="project-image"
-              src="/thoughts/icon-variables/preview.png"
-              style="view-transition-name: thoughts-icv-preview"
-            />
-            <div class="project-details">
-              <div class="project-title">Using Variables for Icon Sets</div>
-            </div>
-          </a>
-          <a href="/thoughts/looping-figma-animation/" class="project">
-            <img
-              class="project-image"
-              src="/thoughts/looping-figma-animation/preview.png"
-              style="view-transition-name: thoughts-lfa-preview"
-            />
-            <div class="project-details">
-              <div class="project-title">Looping Animations in Figma</div>
-            </div>
-          </a>
-          <a href="/thoughts/better-layer-selecting/" class="project">
-            <img
-              class="project-image"
-              src="/thoughts/better-layer-selecting/preview.png"
-              style="view-transition-name: thoughts-bls-preview"
-            />
-            <div class="project-details">
-              <div class="project-title">Better Layer Selecting</div>
-            </div>
-          </a>
-          <a href="/thoughts/component-child-width/" class="project">
-            <img
-              class="project-image"
-              src="/thoughts/component-child-width/preview.png"
+          <figure class="figure">
+            <video
+              autoplay
+              controls
+              loop
+              class="figure-video"
+              poster="preview.png"
               style="view-transition-name: thoughts-ccw-preview"
-            />
-            <div class="project-details">
-              <div class="project-title">
-                Changing Width Inside a Component Instance
-              </div>
-            </div>
-          </a>
+            >
+              <source src="video.mp4" type="video/mp4" />
+            </video>
+          </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <p>
+              So there's this annoying thing in Figma where you can't change the
+              width of layers inside of an instance of a component. You can only
+              change the width of that instance directly and everything inside
+              of it will adjust and scale according their position rules. This
+              was causing me a bit of grief as I was building the Input Slider
+              component for the
+              <a href="/projects/dixa-design-system/">Dixa Design System</a>.
+            </p>
+            <p>
+              As a start I created a component set with <code>Offset</code> and
+              <code>Value</code> props, with each having options for 0%, 25%,
+              50%, and 100%. But I really wanted to give the designers using the
+              component the freedom to set the width of the value to anything
+              they need. To open up the possibility of creating more flexible
+              prototypes, or maybe because I don't like accepting that something
+              is impossible.
+            </p>
+            <p>
+              So my workaround for this limitation in Figma was to leverage Auto
+              Layout properties. As it turns out you can change the value of
+              those properties for layers inside of an instance of a component.
+              Just by converting the frame that wraps the handles and track for
+              the value to Auto Layout, and setting the track to be absolutely
+              positioned, now we can use the <code>Gap</code> property to set
+              any width we want for the value.
+            </p>
+          </div>
         </section>
       </article>
 
