--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -36,13 +36,16 @@
     <div class="layout">
       <!-- Nav -->
       <nav class="nav" style="view-transition-name: nav">
-        <a class="nav-home" href="/">
+        <a class="flex gap-16 center" href="/">
           <img
             src="/assets/memoji.png"
             class="memoji small"
             alt="Memoji of Benedict Forrest"
           />
-          Benedict Forrest
+          <div class="flex column">
+            <strong>Benedict Forrest</strong>
+            <small>Product Designer</small>
+          </div>
         </a>
         <div class="flex gap-8">
           <a class="button" href="/">💼 Work</a>
@@ -189,7 +192,7 @@
           />
           <div class="flex column gap-8">
             <h2>Benedict Forrest</h2>
-            <p>Product Designer in Sydney NSW Australia.</p>
+            <p>Product Designer in Sydney, Australia.</p>
           </div>
           <div class="flex gap-24">
             <a href="mailto:benedict.forrest@me.com">
