--- a/thoughts/better-layer-selecting/index.html
+++ b/thoughts/better-layer-selecting/index.html
@@ -53,9 +53,7 @@
         </a>
         <div class="flex gap-8">
           <a class="button" href="/">💼 Work</a>
-          <a class="button" href="/thoughts/" aria-current="page"
-            >🧠 Thoughts</a
-          >
+          <a class="button" href="/thoughts/">🧠 Thoughts</a>
           <a class="button" href="/about/">🧑‍💻 About</a>
         </div>
       </nav>
