updates Dixa Knowledge Management case study

--- a/projects/dixa-knowledge-management/index.html
+++ b/projects/dixa-knowledge-management/index.html
@@ -93,6 +93,22 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
+            <img class="figure-image" src="personas.png" />
+            <figcaption class="figure-caption">
+              Knowledge Management - User personas
+            </figcaption>
+          </figure>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <img class="figure-image" src="user-flow.png" />
+            <figcaption class="figure-caption">
+              Knowledge Management - User journey map
+            </figcaption>
+          </figure>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
             <img class="figure-image" src="home.png" />
             <figcaption class="figure-caption">
               Knowledge Management - Home design concept
@@ -112,14 +128,6 @@
             <img class="figure-image" src="category.png" />
             <figcaption class="figure-caption">
               Knowledge Management - Category design concept
-            </figcaption>
-          </figure>
-        </section>
-        <section class="section gallery">
-          <figure class="figure">
-            <img class="figure-image" src="article.png" />
-            <figcaption class="figure-caption">
-              Design concept for editing an article's meta information
             </figcaption>
           </figure>
         </section>
