Update "Knowledge Management" case study

--- a/projects/dixa-knowledge-management/index.html
+++ b/projects/dixa-knowledge-management/index.html
@@ -77,8 +77,10 @@
               friendship platform.
             </h1>
             <p>
-              Rebuilding our knowledge management tool into the Dixa platform
-              was an opportunity to elevate the quality of our interface.
+              When the Elevio product and team were acquired by Dixa in 2021 we
+              took the task of rebuilding our knowledge management features into
+              the new platform as an opportunity to elevate the quality of our
+              product offerings.
             </p>
           </div>
         </header>
@@ -91,51 +93,150 @@
             />
           </figure>
         </section>
+        <section class="section">
+          <div class="text">
+            <h2>About the Project</h2>
+            <p>
+              This MVP for the knowledge management features in Dixa was
+              completed in 12 weeks, with the majority of the design work being
+              completed in the first 4 weeks. I was the Product Designer working
+              in a cross-discipline team with Product Managers, Developers and
+              Testers.
+            </p>
+            <p>
+              Our main goal was to reproduce the critical features of Elevio
+              inside of Dixa to create and all-in-one customer support and
+              knowledge platform, unlocking more convenient and powerful tools
+              to give customers best-in-class support.
+            </p>
+          </div>
+        </section>
         <section class="section gallery">
           <figure class="figure">
             <img class="figure-image" src="personas.png" />
-            <figcaption class="figure-caption">
-              Knowledge Management - User personas
-            </figcaption>
           </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>Understanding Our New User Base</h2>
+            <p>
+              As we were transitioning from a small Australian startup to being
+              a part of a larger European enterprise software company, we were
+              aware that we would have a whole new audience to understand and
+              serve.
+            </p>
+            <p>
+              Working with a UX Researching already inside Dixa, I made
+              modification to the existing user personas and added new personas
+              to highlight knowledge-specific objectives and challenges. During
+              this research we learnt that while the scale of the audience and
+              it's needs had increased, the underlying desires remained the
+              same.
+            </p>
+          </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
             <img class="figure-image" src="user-flow.png" />
-            <figcaption class="figure-caption">
-              Knowledge Management - User journey map
-            </figcaption>
           </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>Defining How We Fit Into the Platform</h2>
+            <p>
+              Working with the entire Knowledge Team, and coordinating with
+              domain experts from other teams inside Dixa, I created User
+              Journey Maps to discover what areas of the platforms our feature
+              would touch on.
+            </p>
+            <p>
+              We used these to define what features we would need to build from
+              scratch, and what feature of Dixa we could repurpose for our
+              needs. We also identified opportunities for new features that we
+              couldn't achieve before as an external integration, like created
+              automated, knowledge driven responses to customer request.
+            </p>
+          </div>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <img class="figure-image" src="wireframes.png" />
+          </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>Exploring New Approaches</h2>
+            <p>
+              The task of rebuilding our knowledge management platform in a new
+              codebase presented us with an opportunity to reinvent our systems.
+              We explored the possibilities through brainstorming sessions,
+              whiteboard meetings, sketches and prototypes. Meeting and
+              collaborating online and in person to quickly iterate and test
+              concepts, and validate possible design and technical directions.
+            </p>
+            <p>
+              I distilled these many fantastic concepts into wireframes and a
+              low-fidelity prototype in Figma. I improved upon the previous
+              creation and management tools by introducing new interaction
+              patterns for drag-and-drop editing to speed up common tasks like
+              reordering Articles. We also made a clearer delineation between
+              our management and delivery tools process by introducing the
+              concept of "Collections", that would allow a group of content to
+              be served to multiple end-points.
+            </p>
+          </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
             <img class="figure-image" src="home.png" />
-            <figcaption class="figure-caption">
-              Knowledge Management - Home design concept
-            </figcaption>
           </figure>
+        </section>
+        <section class="section">
+          <div class="text">
+            <h2>Designing Our MVP</h2>
+            <p>
+              With the groundwork laid to understand our customer needs, and our
+              own internal goals, I created the finalised design concepts for
+              our MVP in Figma. The new designs married our features with the
+              design aesthetics and branding of Dixa. This work included
+              creating designs for our Knowledge Management screens and Article
+              Editor, as well updating, and contributing new components, to the
+              Dixa Design system.
+            </p>
+            <p>
+              In the end we successfully achieved our goal of recreating our
+              features inside of the Dixa platform in a way that felt truly
+              native to Dixa. We also improved upon our existing product
+              offerings with new features including: drag-and-drop organising,
+              inline meta information editing, batch updating, and a new
+              block-based article editor.
+            </p>
+          </div>
         </section>
         <section class="section gallery">
           <figure class="figure">
             <img class="figure-image" src="collection.png" />
             <figcaption class="figure-caption">
-              Knowledge Management - Collection design concept
+              Collection design concept
             </figcaption>
           </figure>
-        </section>
-        <section class="section gallery">
           <figure class="figure">
             <img class="figure-image" src="category.png" />
             <figcaption class="figure-caption">
-              Knowledge Management - Category design concept
+              Category design concept
             </figcaption>
           </figure>
-        </section>
-        <section class="section gallery">
+
+          <figure class="figure">
+            <img class="figure-image" src="article.png" />
+            <figcaption class="figure-caption">
+              Article meta design concept
+            </figcaption>
+          </figure>
           <figure class="figure">
             <img class="figure-image" src="editor.png" />
             <figcaption class="figure-caption">
-              Design concept for editing an article's content
+              Article editor design concept
             </figcaption>
           </figure>
         </section>
