update spelling of "wireframing"

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             I have worked as Product Designer for growing Australian software
             companies for over 8 years, guiding them through all stages of
             product development. With end-to-end design process experience
-            including in: user research, wireframeing, high-fidelity designs,
+            including in: user research, wireframing, high-fidelity designs,
             prototypes, pixel-perfect cutups, and complex design systems. I can
             bring valuable skills to any product team.
           </p>
