fix broken video

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -110,7 +110,7 @@
               class="figure-video"
               poster="layout.png"
             >
-              <source src="layout.mov" type="video/mp4" />
+              <source src="layout.mp4" type="video/mp4" />
             </video>
           </figure>
         </section>
