make videos play inline on mobile

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -105,8 +105,8 @@
           <figure class="figure">
             <video
               autoplay
-              controls
               loop
+              playsinline
               class="figure-video"
               poster="layout.png"
             >
