--- a/thoughts/better-layer-selecting/index.html
+++ b/thoughts/better-layer-selecting/index.html
@@ -77,8 +77,8 @@
           <figure class="figure">
             <video
               autoplay
-              controls
               loop
+              playsinline
               class="figure-video"
               style="view-transition-name: thoughts-bls-preview"
             >
@@ -117,7 +117,7 @@
         </section>
         <section class="section gallery">
           <figure class="figure">
-            <video autoplay controls loop class="figure-video">
+            <video autoplay loop playsinline class="figure-video">
               <source src="after.mp4" type="video/mp4" />
             </video>
           </figure>
