--- a/thoughts/looping-figma-animation/index.html
+++ b/thoughts/looping-figma-animation/index.html
@@ -77,8 +77,8 @@
           <figure class="figure">
             <video
               autoplay
-              controls
               loop
+              playsinline
               class="figure-video"
               poster="preview.png"
               style="view-transition-name: thoughts-lfa-preview"
