Update project titles

--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
               style="view-transition-name: project-dds-preview"
             />
             <div class="project-details">
-              <div class="project-title">Dixa Design System</div>
-              <div class="project-description">
-                Design System, Design Ops, Figma
+              <div class="project-title">
+                Designing for Designers: Transforming and modernising a
+                neglected design system
               </div>
+              <div class="project-description">Dixa, Design System, Figma</div>
             </div>
           </a>
-          <a href="/projects/dixa-accessibility-guidelines/" class="project">
+          <!-- <a href="/projects/dixa-accessibility-guidelines/" class="project">
             <img
               class="project-image"
               src="/projects/dixa-accessibility-guidelines/preview.png"
@@ -115,7 +116,7 @@
                 Accessibility, Design Ops, Notion
               </div>
             </div>
-          </a>
+          </a> -->
           <a href="/projects/dixa-knowledge-management/" class="project">
             <img
               class="project-image"
@@ -123,8 +124,11 @@
               style="view-transition-name: project-dkm-preview"
             />
             <div class="project-details">
-              <div class="project-title">Dixa Knowledge Management</div>
-              <div class="project-description">Web App, UI Design, Figma</div>
+              <div class="project-title">
+                Navigating Knowledge: Creating a seamless browsing experience
+                for knowledge
+              </div>
+              <div class="project-description">Dixa, Web App, Figma</div>
             </div>
           </a>
           <a href="/projects/dixa-sign-in/" class="project">
@@ -134,10 +138,11 @@
               style="view-transition-name: project-dsi-preview"
             />
             <div class="project-details">
-              <div class="project-title">Dixa Sign in</div>
-              <div class="project-description">
-                UI Design, UX Design, Redesign
+              <div class="project-title">
+                Levelling-Up Logins: Removing barriers to faster customer
+                support
               </div>
+              <div class="project-description">Dixa, Web App, Figma</div>
             </div>
           </a>
           <a href="/projects/rotageek-mobile-app/" class="project">
@@ -147,10 +152,11 @@
               style="view-transition-name: project-rma-preview"
             />
             <div class="project-details">
-              <div class="project-title">Rotageek Mobile App</div>
-              <div class="project-description">
-                Mobile App, UI Design, Figma
+              <div class="project-title">
+                Empowering Employees: Redesigning a mobile app for part-time
+                workers
               </div>
+              <div class="project-description">RotaGeek, Mobile App, UI/UX</div>
             </div>
           </a>
         </section>
