--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -70,7 +70,10 @@
               </svg>
               Back</a
             >
-            <h1>Dixa Design System</h1>
+            <h1>
+              Designing for Designers: Transforming and modernising a neglected
+              design system
+            </h1>
             <p>
               If a strong house needs a strong foundation, then a strong app
               needs a strong design system.
