--- a/projects/dixa-knowledge-management/index.html
+++ b/projects/dixa-knowledge-management/index.html
@@ -73,8 +73,8 @@
               Back
             </a>
             <h1 class="test">
-              A redesigned knowledge management tool for Dixa - the customer
-              friendship platform.
+              Navigating Knowledge: Creating a seamless browsing experience for
+              knowledge
             </h1>
             <p>
               When the Elevio product and team were acquired by Dixa in 2021 we
