--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -66,7 +66,9 @@
               </svg>
               Back
             </a>
-            <h1 class="test">Improving the Dixa sign in experience</h1>
+            <h1 class="test">
+              Levelling-Up Logins: Removing barriers to faster customer support
+            </h1>
             <p>
               This in-house project with Dixa was completed in 6 weeks, with me
               acting as the designer and coordinating with the project manager,
