--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -70,7 +70,10 @@
               </svg>
               Back
             </a>
-            <h1 class="test">Rotageek Mobile App</h1>
+            <h1 class="test">
+              Empowering Employees: Redesigning a mobile app for part-time
+              workers
+            </h1>
             <p>
               A world-class scheduling and workforce management solution, now on
               your phone.
