update page headers

--- a/about/index.html
+++ b/about/index.html
@@ -62,14 +62,18 @@
       <article class="article">
         <section class="section">
           <div class="text">
-            <h1>Get to know me more.</h1>
+            <img src="/assets/memoji/about.png" class="memoji" />
+            <h1>
+              Hi, I'm Benedict.
+              <div>I have an eye for design and a sweet tooth.</div>
+            </h1>
             <p>
-              I've been designing and coding for the web for 17 years. That's so
-              long ago, that when I was learning web development I was using
-              Dreamweaver (and it was still owned by Macromedia). I've done it
-              all from creating custom HTML email template (by hand, all in
-              tables) to maintaining design systems with 100+ components for
-              global SaaS companies.
+              I have worked as Product Designer for growing Australian software
+              companies for over 8 years, guiding them through all stages of
+              product development. With end-to-end design process experience
+              including in: user research, wireframing, high-fidelity designs,
+              prototypes, pixel-perfect cutups, and complex design systems. I
+              can bring valuable skills to any product team.
             </p>
             <p>
               I do my best work when I'm with a small team of enthusiastic,
