--- a/index.html
+++ b/index.html
@@ -61,34 +61,16 @@
       <!-- Intro -->
       <section class="section">
         <div class="text">
+          <img src="/assets/memoji/work.png" class="memoji" />
           <h1>
-            👋 G'Day, I'm Benedict Forrest a Product Designer based in Sydney.
+            Hi, I'm Benedict.
+            <div>I design apps &amp; systems that help people.</div>
           </h1>
-          <p>
-            I have worked as Product Designer for growing Australian software
-            companies for over 8 years, guiding them through all stages of
-            product development. With end-to-end design process experience
-            including in: user research, wireframing, high-fidelity designs,
-            prototypes, pixel-perfect cutups, and complex design systems. I can
-            bring valuable skills to any product team.
-          </p>
         </div>
       </section>
 
       <!-- Gallery -->
       <article class="article">
-        <section class="section">
-          <div class="text center">
-            <div class="flex column gap-8">
-              <h2>My Work</h2>
-              <p>
-                I've worked on a-lot-a-lot-a-lot of projects, who has the time
-                to go through them all? So here are just the best pieces of my
-                work that I want to show you.
-              </p>
-            </div>
-          </div>
-        </section>
         <section class="section gallery">
           <a href="/projects/dixa-design-system/" class="project">
             <img
