--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -64,11 +64,11 @@
       <article class="article">
         <header class="section">
           <div class="text">
-            <h1>Thoughts</h1>
-            <p>
-              Some of my thoughts and experiments with Figma and the web. Read
-              at your own risk.
-            </p>
+            <img src="/assets/memoji/thoughts.png" class="memoji" />
+            <h1>
+              Hi, I'm Benedict.
+              <div>I use Figma &amp; HTML/CSS to explore ideas.</div>
+            </h1>
           </div>
         </header>
         <section class="section gallery">
