--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav class="nav" style="view-transition-name: nav">
         <a class="flex gap-16 center" href="/" aria-current="page">
           <img
-            src="/assets/memoji.png"
+            src="/assets/memoji/smile.png"
             class="memoji small"
             alt="Memoji of Benedict Forrest"
           />
@@ -148,7 +148,7 @@
       <footer class="footer">
         <div class="text center">
           <img
-            src="/assets/memoji.png"
+            src="/assets/memoji/smile.png"
             class="memoji"
             alt="Memoji of Benedict Forrest"
           />
