--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -38,7 +38,7 @@
       <nav class="nav" style="view-transition-name: nav">
         <a class="flex gap-16 center" href="/">
           <img
-            src="/assets/memoji.png"
+            src="/assets/memoji/smile.png"
             class="memoji small"
             alt="Memoji of Benedict Forrest"
           />
@@ -188,7 +188,7 @@
       <footer class="footer">
         <div class="text center">
           <img
-            src="/assets/memoji.png"
+            src="/assets/memoji/smile.png"
             class="memoji"
             alt="Memoji of Benedict Forrest"
           />
