--- a/thoughts/icon-variables/index.html
+++ b/thoughts/icon-variables/index.html
@@ -42,7 +42,7 @@
       <nav class="nav" style="view-transition-name: nav">
         <a class="flex gap-16 center" href="/">
           <img
-            src="/assets/memoji.png"
+            src="/assets/memoji/smile.png"
             class="memoji small"
             alt="Memoji of Benedict Forrest"
           />
@@ -123,7 +123,7 @@
       <footer class="footer">
         <div class="text center">
           <img
-            src="/assets/memoji.png"
+            src="/assets/memoji/smile.png"
             class="memoji"
             alt="Memoji of Benedict Forrest"
           />
